<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ace.krishinetra_mobile.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/analyzeFragment"
        android:name="com.ace.krishinetra_mobile.ui.analyze.AnalyzeFragment"
        android:label="@string/nav_analyze"
        tools:layout="@layout/fragment_analyze" />

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.ace.krishinetra_mobile.ui.chat.ChatFragment"
        android:label="@string/nav_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ace.krishinetra_mobile.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_signIn"
            app:destination="@id/signInFragment" />

        <action
            android:id="@+id/action_profile_to_signUp"
            app:destination="@id/signUpFragment" />
    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.ace.krishinetra_mobile.ui.auth.SignInFragment"
        android:label="@string/sign_in_title"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.ace.krishinetra_mobile.ui.auth.SignUpFragment"
        android:label="@string/sign_up_title"
        tools:layout="@layout/fragment_sign_up" />

</navigation>
